# owm

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build.yml
owm-problem/: Cargo.toml
owm-problem/src/: binary.rs  derive.rs  encoding.rs  lib.rs  post_processing.rs  rect.rs
owm-problem/src/objective/: area_ratios.rs  center_main.rs  gaps.rs  mod.rs  overlap.rs  reading_order.rs
src/: binary.rs  encoding.rs  lib.rs  objective.rs  post_processing.rs  protocol.rs  rect.rs  testing.rs  types.rs
src/objective/: adjacent_close.rs  area_ratios.rs  aspect_ratios.rs  consistency.rs  mod.rs
