[workspace]
members = [
  "owm-problem",
]

[package]
name = "owm"
version = "0.1.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "An experimental River layout generator using mathematical optimization to invent layouts on-the-fly"
repository = "https://github.com/justinlovinger/owm"
readme = "README.md"
keywords = ["optimization", "river", "window-manager"]
categories = ["command-line-utilities"]
license = "MIT"

[profile.dev]
# Generating layouts is significantly slower than compiling.
opt-level = 3

[profile.test]
opt-level = 0

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
once_cell = "1.18.0"
optimal = { git = "https://github.com/justinlovinger/optimal-rs.git" }
owm-problem = { path = "owm-problem", version = "0.1.0" }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.7.0"
wayland-client = "0.30.2"
wayland-scanner = "0.30.1"

[dev-dependencies]
proptest = "1.2.0"
test-strategy = "0.3.1"
