[package]
name = "owm-problem"
version = "0.1.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Problem definitions for the owm layout"
repository = "https://github.com/justinlovinger/owm"
readme = "README.md"
keywords = ["optimization"]
categories = []
license = "MIT"

[dependencies]
derive_more = "0.99.17"
itertools = "0.11.0"
ndarray = "0.15.6"
num-traits = "0.2.16"
paste = "1.0.14"
thiserror = "1.0.46"

[dev-dependencies]
proptest = "1.2.0"
test-strategy = "0.3.1"
